[tool.poetry]
name = "minimal-spanning-subnet"
version = "0.1.0"
description = ""
authors = ["ThanKarab <tkarabatsis@hotmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
